
Added KubeJS Block of Raw Ores.
Added KubeJS Raw Ores (Tin, Lead, Silver, Nickel, Osmium, Uranium) and Textures.
Added KubeJS Raw Tin, Lead, Silver, Nickel, Osmium, Uranium to Andesite Mesh & Gravel Create Sifting Recipe.
Fixed Storage Block Textures.

Added to Immersive Engineering Questline.
Modified Alpha Questline.

https://www.youtube.com/watch?v=JoW4HgBsgYs

1.21.1-1.7-beta | "Industrial Foregoing Update"

Added Industrial Foregoing.
Added Titanium.

Updated Balm.
Updated Comforts (Fabric/Forge/Quilt).
Updated Create Sifting.
Updated JourneyMap.
Updated Mechanicals Lib.
Updated ModernFix.
Updated Mystical Agriculture.
Updated Sophisticated Backpacks.
Updated Sophisticated Core.
Updated Sophisticated Storage.
Updated Waystones.

Added netherrack andesite mesh create sifting recipe.
Moved gateways to eternity datapack to KubeJS data folder.
Changed waterlogged dirt create sifting recipe to require sand.
Added sugar cane to the above recipe.
Created create sifter sand recipe (bone meal and cactus for now).
Added farmers delight wild rice to create sifter (dirt).
Added pumpkin seeds and melon seeds to create sifter (dirt).
Fixed bug in which left clicking multiple empty blaze burners would only return one blaze burner.
Added create mixing recipe for immersive engineering redstone acid.
Added KubeJS aluminum nugget, raw ore.
Added KubeJS uranium plate.

Added Industrial Foregoing Questline.
Added to Immersive Engineering Questline.
Added to Epsilon Questline.

1.21.1-1.8-beta

Added texture to andesite, diorite, granite, tuff Gravel.
Added texture to block of raw aluminum, lead, silver, nickel, uranium.
Added soulium recipe from sifting soul sand.
Removed waterlogged requirement to sift crushed netherrack.
Added deepslate gravel sifting recipe for raw gold ore, amethyst shard, prosperity shard.
Removed unused items from original Infinite Horizons modpack.

Updated Balm.
Updated Sophisticated Backpacks.
Updated Sophisticated Core.
Updated Sophisticated Storage.