@@ -70,3 +70,6 @@ global.blocks = [
 global.raw_ore_blocks = [
     'aluminum', 'lead', 'silver', 'nickel', 'uranium'
 ];
+global.stones = [
+    'tuff', 'deepslate', 'diorite', 'granite', 'andesite'
+];
